# ccspec

./: CMakeLists.txt
include/ccspec/core/formatters/: text_formatter.h
spec/: CMakeLists.txt
src/: CMakeLists.txt
src/core/formatters/: text_formatter.cc
